Mapping recipe with user

--- a/data/recipes.yml
+++ b/data/recipes.yml
@@ -1,12 +1,21 @@
--
-  id: 1
-  name: オムライス
-  description: 卵を焼いてごはんにのせる
--
-  id: 2
-  name: 親子丼
-  description: 鶏肉を焼いて卵でとじてごはんにのせる
--
-  id: 3
-  name: 杏仁豆腐
-  description: 牛乳と砂糖をまぜてゼラチンで固める
+users:
+  -
+    id: 1
+    user_name: alpaca-tc
+
+recipes:
+  -
+    id: 1
+    name: オムライス
+    description: 卵を焼いてごはんにのせる
+    user_id: 1
+  -
+    id: 2
+    name: 親子丼
+    description: 鶏肉を焼いて卵でとじてごはんにのせる
+    user_id: 1
+  -
+    id: 3
+    name: 杏仁豆腐
+    description: 牛乳と砂糖をまぜてゼラチンで固める
+    user_id: 1
